Changelog Legend:

[+] = Added
[*] = Changed
[^] = Moved
[=] = No Changes
[x] = Deleted
[!] = Bugs

(06/24/2012) - Improvements - Version 1.6.6
[+] missing social icons added in previous version
[!] tinynav.js 


(06/23/2012) - Improvements - Version 1.6.3/4/5
[+] Theme Options
[+] Serbian and Persian languages
[+] New media queries 240 and 320
[x] JS Dev removal of duplicates
[+] Tinynav CSS
[+] Icons Yelp, Vimeo and foursquare
[*] FitVids support for Wistia
[!] Missing select image
[+] Placing back modernizer.js DEV

(06/11/2012)
[*] Improvement in Theme Options
[*] Tinynav to show Home instead of Navigation


(06/08/2012) - Maintenance - Version 1.6.0/1
[!] /includes/version.php
[!] fallback_cb for all but main menu
[!] admin-head-callback < 3.4
[*] code beautifying 

(06/07/2012) - Maintenance - Version 1.5.9
[x] Theme Option redirect upon activation
[*] /includes/version.php 3.4 compatibility
[*] Theme Option name < 3.4 compatibility
[+] menu hover color
[+] antialiased CSS
[x] body background image CSS
[+] minimized responsive menu

(06/03/2012) - Version 1.5.8
[!] missing search query from search.php

(06/02/2012) - Version 1.5.6/7
[*] all* language updates
[+] new languages
    - Croatian
	- Serbian (Latin)
[+] featured image support for archive.php
[+] overflow auto for blockquote
[*] improved search.php

(05/26/2012) - Version 1.5.4/5
[+] new languages
    - Bulgarian
	- Norwegian
[*] all* language updates
[+] direct script access disallowed
[*] featured-image.png
[*] screenshot.png
[x] Google Font removed for non-English
    language compatibility
[+] all* "Helvetica Neue", Helvetica, Arial, sans-serif;
[*] search.php text
[*] all* not found arrows
[x] breadcrumbs for search.php
[*] reduced font-size in theme-options.css
[*] more precise responsive grids
[*] style.css maintenance

(05/17/2012) - Version 1.5.3
[+] new languages
    - Malay
    - Catalan
    - Spanish
[*] CSS tutorial link changed to
    https://developer.mozilla.org/en/CSS
