@@ -7,6 +7,10 @@ Changelog Legend:
 [x] = Deleted
 [!] = Bugs
 
+(06/24/2012) - Bug fix - Version 1.6.7
+[!] Unformatted form fields
+[+] Polish Language
+
 (06/24/2012) - Improvements - Version 1.6.6
 [+] missing social icons added in previous version
 [!] tinynav.js 
